# Data-Synthesis

raw_financial_data_lake/: .gitignore  README.md  pyproject.toml
raw_financial_data_lake/config/: bse_announcements.authoritative_15.json  cninfo_announcements.authoritative_100.json  cninfo_announcements.expanded_v2.json  default_config.json  hkex_announcements.authoritative_40.json  test_config.json
raw_financial_data_lake/docs/: analysis_api_test_20260718.md  financial_analysis_compiler.md  finsearchcomp_distribution_alignment.md  greater_china_qa_constraints.md  layered_architecture.md  phase1_runbook.md  qa_advanced_automatic_chains.md  qa_conditional_output_contract.md  qa_language_market_decoupling.md  qa_production_funnel.md  qa_quality_evaluation_system.md  qa_surface_diversity_v3_report.md  qa_v4_graph_compiler.md  semi_open_qa_synthesis_report.md  source_registry_contract.md  storage_budget.md
raw_financial_data_lake/finraw/: __init__.py  artifact_retention.py  atomic_facts.py  bse_discovery.py  builds.py  cli.py  cn_financial_statements.py  cn_market_universe.py  cninfo_discovery.py  config.py  coverage.py  derived_facts.py  document_extraction.py  entity_normalization.py  export.py  fact_quality.py  fact_standardization.py  fact_universe.py  greater_china_quality.py  hkex_discovery.py  http.py  kg_builder.py  kg_query.py  kg_retention.py  layers.py  llm_client.py  metric_ontology.py  official_facts.py  qa_cleanup.py  qa_retention.py  quality.py  regional_share_audit.py  source_definitions.py  source_registry.py  storage.py  validation.py
(+184 files in other folders)
